删除web.pom中的packing标签