@@ -19,8 +19,8 @@ import java.util.regex.Pattern;
  */
 public class Common {
     //记录当前已使用的端口号
-    private static List<Long> ports = new ArrayList<>();
-    private static Long port = 6380L;
+    private static List<Integer> ports = new ArrayList<>();
+    private static int port = 6380;
 
     /**
      * 校验端口号是否可用
@@ -28,7 +28,7 @@ public class Common {
      * @param object
      * @return
      */
-    public static Long checkPort(Object object) {
+    public static Integer checkPort(Object object) {
         if (StringUtils.isEmpty(object)) {  //如果未传入端口号， 则自动生成
             List<String> readPort;
             do {
@@ -40,7 +40,7 @@ public class Common {
             }while (readPort != null && readPort.size() != 0);
         } else {
             List<String> readPort = netstat_anoByPort(port);
-            if (ports.indexOf(Long.valueOf(object.toString())) >= 0 || readPort!= null && readPort.size() != 0) {    //如果用户传入的端口号已被占用
+            if (ports.indexOf(new Integer(object.toString())) >= 0 || readPort!= null && readPort.size() != 0) {    //如果用户传入的端口号已被占用
                 return null;
             }
             ports.add(port);
@@ -77,7 +77,23 @@ public class Common {
 
         return new AttributeBean(type, name, value);
     }
+/*
+    public static void setAttribute(Field field, Object bean, Object value) {
+        String name = field.getName();
+        String type = field.getGenericType().toString();                //获取属性的类型
 
+        try {
+            //将属性的首字符大写，构造get方法
+            Method m = bean.getClass().getMethod("set" + name.substring(0, 1).toUpperCase() + name.substring(1));
+            if (type.equals("class [[Ljava.lang.String;")) {  //如果是字符串二维数组
+                m.invoke(bean, String.valueOf(value));
+            }
+            Object invoke = m.invoke(bean, value);//调用setter方法
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+*/
     /**
      * 根据软件路径和配置文件路径启动进程
      *
@@ -104,16 +120,11 @@ public class Common {
      *
      * @param port
      */
-    public static void killProcessByPort(Long port) {
+    public static void killProcessByPort(int port) {
         //查找进程号
         List<String> read = netstat_anoByPort(port);
-        if (read.size() == 0) {
+        if ((read == null || read.size() == 0)) {
             System.out.println("找不到该端口的进程");
-            try {
-                Thread.sleep(600);
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
         } else {
             for (String string : read) {
                 System.out.println(string);
@@ -123,7 +134,7 @@ public class Common {
         }
     }
 
-    public static List<String> netstat_anoByPort(Long port) {
+    public static List<String> netstat_anoByPort(int port) {
         Runtime runtime = Runtime.getRuntime();
         try {
             Process process = runtime.exec("cmd /c netstat -ano | findstr \"" + port + "\"");
@@ -140,8 +151,8 @@ public class Common {
      *
      * @param ports
      */
-    public void killProcessByPorts(Set<Long> ports) {
-        for (Long port : ports) {
+    public void killProcessByPorts(Set<Integer> ports) {
+        for (int port : ports) {
             killProcessByPort(port);
         }
     }
@@ -150,10 +161,11 @@ public class Common {
      * 根据端口号杀死进程--
      *
      * @param in
+     * @param port
      * @return
      * @throws IOException
      */
-    private static List<String> read(InputStream in, Long port) throws IOException {
+    private static List<String> read(InputStream in, int port) throws IOException {
         List<String> data = new ArrayList<>();
         BufferedReader reader = new BufferedReader(new InputStreamReader(in, "UTF-8"));
         String line;
@@ -182,9 +194,10 @@ public class Common {
      * 验证此行是否为指定的端口，因为 findstr命令会是把包含的找出来，例如查找80端口，但是会把8099查找出来
      *
      * @param str
+     * @param port
      * @return
      */
-    private static boolean validPort(String str, Long port) {
+    private static boolean validPort(String str, int port) {
         Pattern pattern = Pattern.compile("^ *[a-zA-Z]+ +\\S+");
         Matcher matcher = pattern.matcher(str);
 
