@@ -37,13 +37,15 @@ public class RedisCommon {
     /**
      * 保存Redis程序信息
      *
-     * @param username
-     * @param redisSoftwarePath
-     * @param redisConfigPath
+     * @param modelMap
      * @return
      */
-    public static void saveRedisProceedingInfo(String username, String redisSoftwarePath, String redisConfigPath) {
+    public static void saveRedisProceedingInfo(Map modelMap) {
+        String redisSoftwarePath = String.valueOf(modelMap.get("redisSoftwarePath"));
+        String redisConfigPath = String.valueOf(modelMap.get("redisConfigPath"));
+        String username = "username";
         Map<String, String> map = new HashMap<>();
+        map.put("port", String.valueOf(modelMap.get("port")));
         map.put("state", "");
         map.put("version", "v3.2.100");
         map.put("time", String.valueOf(System.currentTimeMillis()));
@@ -55,8 +57,7 @@ public class RedisCommon {
         }else {
             redisConfigPath = RedisUtil.getRedisHashField(username, "redisConfigPath");
             if (redisConfigPath != null) {
-                Common.killProcessByPort(Long.valueOf(redisConfigPath.substring(
-                        redisConfigPath.lastIndexOf("redis")+5, redisConfigPath.lastIndexOf(".conf"))));
+                Common.killProcessByPort(new Integer(modelMap.get("port").toString()));
             }
         }
         RedisUtil.saveRedisHash(username, map);
@@ -100,7 +101,9 @@ public class RedisCommon {
         List<String> users = getListFromRedis("redisProceedingName");
         for (String string:users){
             Map<String, String> map = RedisUtil.getRedisHashAll(string);
-            map.put("username", string);
+            if (map != null) {
+                map.put("username", string);
+            }
             processes.add(map);
         }
         return processes;
@@ -109,17 +112,21 @@ public class RedisCommon {
     /**
      * 生成redis配置文件
      *
-     * @param redisConfigPath
      * @param modelMap
      * @return
      */
-    public static Boolean writeRedisConfig(String redisConfigPath, Map modelMap) {
+    public static Boolean writeRedisConfig(Map modelMap) {
         AttributeBean attributeBean;    //用来存储RedisConfigBean中单个属性的type、name、value
         RedisConfigBean redisConfigBean = new RedisConfigBean();    //生成默认配置文件类
+        redisConfigBean.setSoftwarePath(String.valueOf(modelMap.get("redisSoftwarePath")));
+        redisConfigBean.setConfigPath(String.valueOf(modelMap.get("redisConfigPath")));
         try {
-            FileWriter fw = new FileWriter(redisConfigPath);            //
+            FileWriter fw = new FileWriter(redisConfigBean.getConfigPath());            //
             Field[] fields = Common.getAttributeFields(redisConfigBean);    //获得redisConfigBean中所有的属性名字
             for (Field field : fields) {    //循环取出每个属性的内容
+                if ("softwarePath".equals(field.toString()) || "configPath".equals(field.toString())){
+                    continue;
+                }
                 StringBuilder strToWrite = new StringBuilder(); //将要写入文件的字符串拼接成一个StringBuilder
                 attributeBean = Common.getAttribute(field, redisConfigBean);   //将一个属性的type、name、value放入attributeBean
                 String name = attributeBean.getName().replace("_", "-");    //将属性名转换为redis配置文件中的字段名
@@ -154,6 +161,7 @@ public class RedisCommon {
                 fw.write(String.valueOf(strToWrite));   //将一个属性的内容写入文件
             }
             fw.close();
+            saveRedisProceedingInfo(modelMap); //保存Redis程序信息
             return true;
         } catch (IOException e) {
             e.printStackTrace();
